--- a/mdn-dom-manipulation/index.html
+++ b/mdn-dom-manipulation/index.html
@@ -4,6 +4,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple DOM example</title>
+    <style>
+      .highlight {
+        color: white;
+        background-color: black;
+        padding: 10px;
+        width: 250px;
+        text-align: center;
+      }
+    </style>
   </head>
   <body>
       <section>
@@ -13,6 +22,35 @@
     <script>
         const link = document.querySelector("a");
         link.textContent = "Mozilla Developer Network";
+        link.href = "https://developer.mozilla.org";
+
+        const sect = document.querySelector("section");
+        const para = document.createElement("p");
+        para.textContent = "We hope you enjoyed the ride.";
+        sect.appendChild(para);
+
+        const text = document.createTextNode(
+          " - the premier source for web development knowledge."
+        );
+        
+        const linkpara = document.querySelector("p");
+        linkpara.appendChild(text)
+
+        sect.appendChild(linkpara);
+        // sect.removeChild(linkpara);
+        // alternates include: 
+        // linkpara.remove();
+        // older browsers: 
+        // linkpara.parentNode.removeChild(linkpara);
+
+        // para.style.color = "white";
+        // para.style.backgroundColor = "black";
+        // para.style.padding = "10px";
+        // para.style.width = "250px";
+        // para.style.textAlign = "center";
+
+        para.classList.add("highlight");
+
     </script>
   </body>
 </html>
